# eada

./: .dockerignore  .env.example  .gitignore  PROGRESS.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_data.csv
.github/workflows/: ci.yml
backend/: Dockerfile  config.py  main.py
backend/agents/: analyst.py  critic.py  graph.py  planner.py  rag_agent.py  router.py  state.py
backend/api/: deps.py
backend/api/middleware/: auth.py  rate_limit.py
backend/api/routes/: auth.py  chat.py  conversations.py  health.py  ingest.py  upload.py
backend/db/: models.py  repositories.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: f4182f8a79fb_create_users_conversations_messages_.py
backend/evaluation/: scorer.py
backend/llm/: gateway.py
backend/mcp/: server.py
backend/memory/: agent_memory.py
backend/observability/: logging.py  tracing.py
backend/rag/: chunker.py  embedder.py  rag_pipeline.py  vector_store.py
backend/tests/unit/: test_agent_memory.py  test_executor.py  test_gateway.py  test_graph.py  test_health.py  test_registry.py  test_scorer.py
backend/tools/: executor.py  file_tool.py  registry.py  sql_tool.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  Auth.tsx  Chat.tsx  api.ts
frontend/src/components/: AgentStatus.tsx  Sidebar.tsx
infra/nginx/: nginx.conf
infra/postgres/: init-multi-db.sh
test_data/: company_report.txt  sales.csv
uploads/: .gitkeep
