[project]
name = "eada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.138.1",
    "langfuse==2.60.0",
    "litellm>=1.90.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.1",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]
